# BaseGraph

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  server.py
app/: __init__.py
app/api/: __init__.py
app/api/endpoints/: __init__.py  chat.py  items.py
config/: env.py
db/pg/: models.py  pg_checkpointer.py
graph/base/: BaseNode.py  base_builder.py
graph/maingraph/: MainGraph.py  TriageNode.py
schema/graph/: graph.py
schema/request/: chat.py
service/chat/: chat_service.py
utils/: LLMSelector.py
